# evolution-on

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac  meson.build  meson_options.txt
po/: en.po  en.pot  meson.build
src/: Makefile.in  evolution-on.schemas.in  meson.build  on_icon.h  on_properties.h  org-gnome-evolution-on.eplug.in  org-gnome-evolution-on.eplug.xml  org-gnome-evolution-tray.eplug.in  org.gnome.evolution.plugin.evolution-on.gschema.xml  org.gnome.evolution.plugin.evolution-tray.gschema.xml  properties.c  properties.h  sn.c  sn.h  tray.c  ucount.c  ucount.h
